--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="con-data">
               <ul>
-                <li>javascript</li>
+                <li>javascript1</li>
                 <li>Angular</li>
                 <li>React</li>
                 <li>Nodejs</li>
