updated page service review

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="fixed-pop">
           <li><a href="#home" class="shadow-out">Home</a></li>
           <li><a href="#service" class="shadow-out">Services</a></li>
-          <li><a href="#about" class="shadow-out">About Us</a></li>
+          <li><a href="#about" class="shadow-out">Reviwes</a></li>
           <li><a href="#contact" class="shadow-out">Contacts</a></li>
         </ul>
         <div class="togler shadow-out"></div>
@@ -52,7 +52,9 @@
             </p>
           </div>
           <div class="btn-con">
-            <button class="shadow-out btn-tran">See more</button>
+            <button class="shadow-out btn-tran">
+              <a href="#service">See more</a>
+            </button>
           </div>
         </div>
         <div class="right-con">
@@ -70,90 +72,12 @@
       <div class="roll roll3"></div>
       <div class="jump jump3"></div>
     </section>
-    <section class="sec-three">
+    <section class="sec-two">
       <div class="sec-con">
         <div class="sec-title">
           <div class="title"><h2 class="title-top">Services</h2></div>
           <div class="para">
             <p class="para-bottom">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
-              alias quidem, nesciunt culpa magni, cupiditate tenetur sunt
-              eveniet eos, consequuntur omnis labore voluptates nobis. Aliquam
-              esse minus.
-            </p>
-          </div>
-        </div>
-        <div class="sec-con-2 shadow-in">
-          <div class="con-bar shadow-out">
-            <div class="con-title">
-              <h2>Projects</h2>
-            </div>
-            <div class="con-data">
-              <ul>
-                <li>javascript</li>
-                <li>Angular</li>
-                <li>React</li>
-                <li>Nodejs</li>
-                <li>java</li>
-              </ul>
-            </div>
-          </div>
-          <div class="con-bar shadow-out">
-            <div class="con-title">
-              <h2>Food</h2>
-            </div>
-            <div class="con-data">
-              <ul>
-                <li>Fridrice</li>
-                <li>Popcorn</li>
-                <li>Grill</li>
-              </ul>
-            </div>
-          </div>
-          <div class="con-bar shadow-out">
-            <div class="con-title">
-              <h2>Tools</h2>
-            </div>
-            <div class="con-data">
-              <ul>
-                <li>VS code</li>
-                <li>Notepad</li>
-                <li>webstorm</li>
-                <li>Sublime</li>
-              </ul>
-            </div>
-          </div>
-          <div class="con-bar shadow-out">
-            <div class="con-title">
-              <h2>Clients</h2>
-            </div>
-            <div class="con-data">
-              <ul>
-                <li>Zoomper</li>
-                <li>Codsteriyo</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="bar-anim shadow-in" id="about">
-      <div class="roll roll0"></div>
-      <div class="jump jump0"></div>
-      <div class="roll roll1"></div>
-      <div class="jump jump1"></div>
-      <div class="roll roll2"></div>
-      <div class="jump jump2"></div>
-      <div class="roll roll3"></div>
-      <div class="jump jump3"></div>
-    </section>
-    <section class="sec-two">
-      <div class="sec-con">
-        <div class="sec-title">
-          <div class="title"><h2 class="title-top1">About Us</h2></div>
-          <div class="para">
-            <p class="para-bottom1">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
               alias quidem, nesciunt culpa magni, cupiditate tenetur sunt
               eveniet eos, consequuntur omnis labore voluptates nobis. Aliquam
@@ -230,6 +154,69 @@
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bar-anim shadow-in" id="about">
+      <div class="roll roll0"></div>
+      <div class="jump jump0"></div>
+      <div class="roll roll1"></div>
+      <div class="jump jump1"></div>
+      <div class="roll roll2"></div>
+      <div class="jump jump2"></div>
+      <div class="roll roll3"></div>
+      <div class="jump jump3"></div>
+    </section>
+    <section class="sec-three">
+      <div class="sec-con">
+        <div class="sec-title">
+          <div class="title"><h2 class="title-top1">Reviwes</h2></div>
+          <div class="para">
+            <p class="para-bottom1">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque
+              alias quidem, nesciunt culpa magni, cupiditate tenetur sunt
+              eveniet eos, consequuntur omnis labore voluptates nobis. Aliquam
+              esse minus.
+            </p>
+          </div>
+        </div>
+        <div class="sec-con-2 shadow-in">
+          <div class="con-bar shadow-out">
+            <div class="con-img"></div>
+            <div class="con-title">
+              <h2>Freelancer</h2>
+            </div>
+            <div class="con-para">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis quibusdam, tempora quidem deleniti minus sequi eius
+              nostrum quos. Nemo, in."
+            </div>
+            <div class="con-sign">- John Wick</div>
+          </div>
+          <div class="con-bar shadow-out">
+            <div class="con-img"></div>
+            <div class="con-title">
+              <h2>Developer</h2>
+            </div>
+            <div class="con-para">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis quibusdam, tempora quidem deleniti minus sequi eius
+              nostrum quos. Nemo, in minus sequi eius nostrum quos in."
+            </div>
+            <div class="con-sign">- Lucifer</div>
+          </div>
+          <div class="con-bar shadow-out">
+            <div class="con-img"></div>
+            <div class="con-title">
+              <h2>UI Designer</h2>
+            </div>
+            <div class="con-para">
+              "Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reiciendis quibusdam, tempora quidem deleniti minus sequi eius
+              nostrum quos, in."
+            </div>
+            <div class="con-sign">- Peter Parker</div>
           </div>
         </div>
       </div>
@@ -502,8 +489,8 @@
             parabot.style.opacity = "0";
           }
           if (
-            document.documentElement.scrollTop > 1100 &&
-            document.documentElement.scrollTop < 1800
+            document.documentElement.scrollTop > 2200 &&
+            document.documentElement.scrollTop < 2750
           ) {
             titletopp.style.transform = "translateY(0px)";
             titletopp.style.opacity = "1";
@@ -546,8 +533,8 @@
             parabot.style.opacity = "0";
           }
           if (
-            document.documentElement.scrollTop > 2200 &&
-            document.documentElement.scrollTop < 2800
+            document.documentElement.scrollTop > 3600 &&
+            document.documentElement.scrollTop < 4300
           ) {
             titletopp.style.transform = "translateY(0px)";
             titletopp.style.opacity = "1";
@@ -577,8 +564,6 @@
       };
       window.addEventListener("scroll", function () {
         let scrollV = window.scrollY;
-        console.log(scrollV);
-
         if (scrollV < 500) {
           title.style.transform = "translateX(" + scrollV * -0.5 + "px)";
           title.style.transition = "0.8s";
