--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <div class="tool-sec">
           <div class="tool-con">
             <div class="tool-title"><h3>Designer Tools</h3></div>
-            <div class="ttol-det">
+            <div class="tool-det">
               <ul>
                 <li>Illustrator</li>
                 <li>Figma</li>
@@ -406,7 +406,7 @@
           </div>
           <div class="tool-con">
             <div class="tool-title"><h3>Ui Developer Tools</h3></div>
-            <div class="ttol-det">
+            <div class="tool-det">
               <ul>
                 <li>Html5</li>
                 <li>Css3</li>
@@ -416,7 +416,7 @@
           </div>
           <div class="tool-con">
             <div class="tool-title"><h3>Front-End Tools</h3></div>
-            <div class="ttol-det">
+            <div class="tool-det">
               <ul>
                 <li>Angular</li>
                 <li>React</li>
@@ -428,7 +428,7 @@
           </div>
           <div class="tool-con">
             <div class="tool-title"><h3>Back-End Tools</h3></div>
-            <div class="ttol-det">
+            <div class="tool-det">
               <ul>
                 <li>Php</li>
                 <li>Java</li>
