--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
         </div>
         <div class="sec-con-2 shadow-in">
-          <div class="con-bar shadow-out">
+          <div class="con-bar con-til shadow-out">
             <div class="con-img"></div>
             <div class="con-title">
               <h2>Freelancer</h2>
@@ -202,7 +202,7 @@
             </div>
             <div class="con-sign">- John Wick</div>
           </div>
-          <div class="con-bar shadow-out">
+          <div class="con-bar con-til shadow-out">
             <div class="con-img"></div>
             <div class="con-title">
               <h2>Developer</h2>
@@ -214,7 +214,7 @@
             </div>
             <div class="con-sign">- Lucifer</div>
           </div>
-          <div class="con-bar shadow-out">
+          <div class="con-bar con-til shadow-out">
             <div class="con-img"></div>
             <div class="con-title">
               <h2>UI Designer</h2>
@@ -688,6 +688,16 @@
         showcontent.style.setProperty("--y", y + "px");
         showcontent.style.setProperty("--x", x + "px");
       };
+    </script>
+    <script src="./js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelectorAll(".con-til"), {
+        max: 25,
+        speed: 400,
+        scale: 1.05,
+        glare: true,
+        "max-glare": 1,
+      });
     </script>
   </body>
 </html>
