--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </head>
   <body>
     <div class="topd">
-      <a href="#home" class="topa"><i class="fas fa-chevron-circle-up"></i></a>
+      <a href="#home" class="topa"
+        ><i class="fa fa-arrow-up" aria-hidden="true"></i
+      ></a>
     </div>
     <header class="shadow-in header-fade">
       <div class="logo-con">
@@ -59,8 +61,8 @@
               reiciendis quas iure fugit.
             </p>
           </div>
-          <div class="btn-con">
-            <button class="shadow-out btn-tran">
+          <div class="btn-con btn-tran">
+            <button class="shadow-out">
               <a href="#service">See more</a>
             </button>
           </div>
