--- a/index.html
+++ b/index.html
@@ -645,6 +645,11 @@
         }
       });
 
+      if (window.innerWidth < 1050) {
+        showcontent.classList.add("con-til");
+      } else {
+        showcontent.classList.remove("con-til");
+      }
       // hover effects
       // showcontent.onmousemove = function (e) {
       //   var y = e.pageY - showcontent.offsetTop;
