--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="topd">
       <a href="#home" class="topa"
-        ><i class="icon-fighter-jet" aria-hidden="true"></i
+        ><div><i class="icon-fighter-jet" aria-hidden="true"></i></div
       ></a>
     </div>
     <header class="shadow-in header-fade">
