--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="sec-con">
         <div class="left-con">
           <div class="title-con">
-            <h1 class="title-tran">Vicky Rowxz</h1>
+            <h1 class="title-tran">Sunder Viswanathan</h1>
           </div>
           <div class="para-con">
             <p class="para-tran">
